# cpp-course-2024

./: README.md
concepts/: build_slides.sh  concepts.html  concepts.md
explicit_object_parameters/: CMakeLists.txt  README.md  crtp.cpp  derived_types.cpp  derived_types_private.cpp  explicit_object_parameter.html  explicit_object_parameter.md  explicit_object_parameters.cpp  factory.cpp  lambda.cpp  member_function_ptr.cpp  self_copy_chain.cpp  tree.cpp  visitor.cpp
explicit_object_parameters/cmake/: Marp.cmake
intro/: intro.html  intro.org
linaro_forge/: CMakeLists.txt  linaro_forge.md  linaro_forge_slides.html  matrix_mult.cpp  matrix_mult_solution.cpp
mdspan/: CMakeLists.txt  mdspan.md  mdspan_slides.html
mdspan/code/: mdarray.cpp  mdspan.cpp  submdspan.cpp
modules/: modules.org  modules_single.html  pika_modules_ninja.dot  pika_nomodules_ninja.dot
outro/: outro.html  outro.org  outro_single.html
simd/: CMakeLists.txt  code.cpp  simd.md  simd_slides.html
slides-support/: Marp.cmake
slides-support/themes/: cscs.css
stdBLAS/: c++2024-stdblas.pptx
stdBLAS/examples/: CMakeLists.txt  cholesky.cpp  gemm.cpp
